--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello world!
+<!DOCTYPE html>
+<html>
+<head>
+  <script src="lib/angular/angular.min.js"></script>
+  <script src="lib/angular-ui-router/angular-ui-router.min.js"></script>
+
+  <script src="src/app.js"></script>
+</head>
+<body>
+  <div id="app" ui-view></div>
+  <h1>Hello world!</h1>
+</body>
+</html>
