--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <script src="src/app.js"></script>
 </head>
 <body>
-  <div id="app" ui-view></div>
-  <h1>Hello world!</h1>
+  <div id="app" ui-view="AppView"></div>
 </body>
 </html>
