--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular-ui-router/angular-ui-router.min.js"></script>
@@ -7,6 +7,6 @@
   <script src="src/app.js"></script>
 </head>
 <body>
-  <div id="app" ui-view></div>
+  <div ui-view></div>
 </body>
 </html>
