--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
-  <script src="lib/angular/angular.min.js"></script>
-  <script src="lib/angular-ui-router/angular-ui-router.min.js"></script>
+  <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular-ui-router/angular-ui-router.js"></script>
 
   <script src="src/app.js"></script>
 </head>
