--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html>
 <head>
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-ui-router/angular-ui-router.js"></script>
