--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,4 +1,4 @@
-<div ng-controller="HomeController">
+<div ng-controller="HomeController as HomeCtrl">
     <h1>Home</h1>
-    <p>{{helloWorld}}</p>
+    <p>{{HomeCtrl.helloWorld}}</p>
 </div>
